updated home index view with js to add destination inputs fields.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,6 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<h1>Midpoint</h1>
+<button id="add_location_btn">Add Destination</button><br />
+<input id="user_base_location" type="text" placeholder="Enter Your Location" autofocus />
+<div id="non_user_location_inputs">
+  <input type="text" placeholder="Enter Destination 1" />
+</div>
