--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,7 @@
 <h1>Midpoint</h1>
-<button id="add_location_btn">Add Destination</button><br />
+
+<!-- <button id="add_location_btn">Add Destination</button><br >
 <input id="user_base_location" type="text" placeholder="Enter Your Location" autofocus />
 <div id="non_user_location_inputs">
   <input type="text" placeholder="Enter Destination 1" />
-</div>
+</div> -->
