--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,15 +10,15 @@
   </head>
   <body>
     <div class="container">
+      <%= yield %>
       <% if user_signed_in? %>
         Logged in as <strong><%= current_user.email %></strong>.
         <%= link_to 'Edit profile', edit_user_registration_path %> |
         <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
       <% else %>
-        <%= link_to "Sign up", new_user_registration_path %> |
-        <%= link_to "Sign in", new_user_session_path %>
+      <%= button_to "Register", new_user_registration_path, :class => "btn btn-primary btn-lg", :method => "get" %>
+      <%= button_to "Sign in", new_user_session_path, :class => "btn btn-primary btn-sm" %>
       <% end %>
-      <%= yield %>
     </div>
   </body>
 </html>
