--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,9 @@
     <%= csrf_meta_tags %>
   </head>
   <body>
+    <header>
+      
+    </header>
     <div class="container">
       <%= yield %>
       <% if user_signed_in? %>
