--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -1,3 +1,13 @@
+header {
+	width: 100%;
+	height: 200px;
+	background-color: grey;
+}
+
+.container {
+	background-color: lightblue;
+}
+
 .btn {
 	background-color: #8AA8B0;
 	border: none;
