--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,3 +4,4 @@
 <input id="user_base_location" type="text" placeholder="Enter Your Location" autofocus />
 <div id="non_user_location_inputs">
   <input type="text" placeholder="Enter Destination 1" />
+</div>
