--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,10 +9,6 @@
     <%= csrf_meta_tags %>
   </head>
   <body>
-    <header>
-      
-    </header>
-    <div class="container">
       <%= yield %>
       <% if user_signed_in? %>
         Logged in as <strong><%= current_user.email %></strong>.
@@ -22,6 +18,8 @@
       <%= button_to "Register", new_user_registration_path, :class => "btn btn-primary btn-lg", :method => "get" %>
       <%= button_to "Sign in", new_user_session_path, :class => "btn btn-primary btn-sm" %>
       <% end %>
+      </div>
+    </div>
     </div>
   </body>
 </html>
