moving app javascript logic to main.js and testing google geocoder

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,3 +5,6 @@
 <div id="non_user_location_inputs">
   <input type="text" placeholder="Enter Destination 1" />
 </div>
+
+<!-- The partial below renders the google map. I include it here for testing purposes -->
+<%= render "results_map" %>
