adding Google API KEY to gitignored config/initializers/google.rb and adding google maps script tag to application.html.erb

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>TimeMidpoint</title>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=<%= GOOGLE_KEY %>&sensor=false"> </script>
     <script type="text/javascript" src="http://oauth.googlecode.com/svn/code/javascript/oauth.js"></script>
     <script type="text/javascript" src="http://oauth.googlecode.com/svn/code/javascript/sha1.js"></script>
     <%= stylesheet_link_tag    "application", :media => "all" %>
@@ -10,7 +11,6 @@
   </head>
   <body>
     <header>
-      
     </header>
     <div class="container">
       <%= yield %>
@@ -19,8 +19,8 @@
         <%= link_to 'Edit profile', edit_user_registration_path %> |
         <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
       <% else %>
-      <%= button_to "Register", new_user_registration_path, :class => "btn btn-primary btn-lg", :method => "get" %>
-      <%= button_to "Sign in", new_user_session_path, :class => "btn btn-primary btn-sm" %>
+        <%= button_to "Register", new_user_registration_path, :class => "btn btn-primary btn-lg", :method => "get" %>
+        <%= button_to "Sign in", new_user_session_path, :class => "btn btn-primary btn-sm" %>
       <% end %>
     </div>
   </body>
