--- a/app/views/home/landing.html.erb
+++ b/app/views/home/landing.html.erb
@@ -1,1 +1,11 @@
-<h1>asd</h1>
+<div class="container">
+	<div class="center">
+		<h1>MIDPOINT &middot</h1>
+		<%= button_to "Register", new_user_registration_path, :class => "btn btn-primary btn-lg", :method => "get" %>
+		<%= button_to "Sign in", new_user_session_path, :class => "btn btn-primary btn-sm" %>
+	</div>
+</div>
+
+
+
+
