--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,18 +8,22 @@
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
   </head>
-  <body>
-      <%= yield %>
+  <body id="landing-background">
+    <div class="transparent">
       <% if user_signed_in? %>
-        Logged in as <strong><%= current_user.email %></strong>.
-        <%= link_to 'Edit profile', edit_user_registration_path %> |
-        <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
-      <% else %>
-      <%= button_to "Register", new_user_registration_path, :class => "btn btn-primary btn-lg", :method => "get" %>
-      <%= button_to "Sign in", new_user_session_path, :class => "btn btn-primary btn-sm" %>
+      <header>
+        <div id="user-info">
+          <p>Hi <strong><%= current_user.first_name%></strong>.</p>
+          <%= link_to 'Edit profile', edit_user_registration_path %>
+          <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
+        </div>
+      </header>
       <% end %>
-      </div>
-    </div>
+      <div class="container">
+        <div class="row">
+      <%= yield %>
+        </div>
+        </div>
     </div>
   </body>
 </html>
