--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,9 +1,10 @@
 <div class="row">
-<div class="col-lg-2">
-<form action="get">
-<label for="user-location">Your Location</label><input type="text">
-<label for="user-location">Freind's Location</label><input type="text">
-<label for="user-location">type of activity</label><input type="text">
-</div>
-</form>
+  <div class="col-lg-2">
+    <form action="get">
+      <label for="user-location">Your Location</label><input type="text">
+      <label for="user-location">Freind's Location</label><input type="text">
+      <label for="user-location">type of activity</label><input type="text">
+  </div>
+    </form>
+    <%= render "results_map" %>
 </div>
