--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -29,14 +29,43 @@ div .center {
   background-size: cover;
 }
 
-.btn {
-	background-color: #FF9800;
-	border: none;
+.btn-lg {
+	width: 200px;
+	height: 60px;
+	background-color: #183EB5;
 	opacity: 0.8;
-	margin-bottom: 5px;
+	font-size: 25px;
 }
 
-.btn:hover {
-	background-color: #FF9800;
+.btn-lg:hover {
+	background-color: #183EB5;
 	opacity: 1;
+
+}
+
+.btn-sm {
+	width: 100px;
+	height: 30px;
+}
+
+.btn {
+	border: none;
+	margin-bottom: 5px;
+	border-radius: 0px;
+	margin-top: 10px;
+}
+
+#sign-up {
+	background-color: #FFB01E;
+	position: absolute;
+	margin: 5%;
+	padding: 30px;
+	border-radius: 20px;
+	-webkit-box-shadow: 7px 7px 5px 0px rgba(50, 50, 50, 0.49);
+	-moz-box-shadow:    7px 7px 5px 0px rgba(50, 50, 50, 0.49);
+	box-shadow:         7px 7px 5px 0px rgba(50, 50, 50, 0.49);
+}
+
+.submit-button {
+	margin-top: 5px;
 }
