--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
   <div class="col-lg-2">
     <form action="get">
       <label for="user-location">Your Location</label><input type="text">
-      <label for="user-location">Freind's Location</label><input type="text">
+      <label for="user-location">Friend's Location</label><input type="text">
       <label for="user-location">type of activity</label><input type="text">
   </div>
     </form>
