--- a/app/views/home/landing.html.erb
+++ b/app/views/home/landing.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
 	<div class="center">
-		<h1>MID &middot</h1>
+		<%= image_tag "Logo-MidPoint.png", :id => "logo"%>
 		<%= button_to "Register", new_user_registration_path, :class => "btn btn-primary btn-lg", :method => "get" %>
 		<%= button_to "Sign in", new_user_session_path, :class => "btn btn-primary btn-sm" %>
 	</div>
