--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,8 +1,8 @@
 <div class="row">
   <div class="col-lg-2">
     <form action="get">
-      <label for="user-location">Your Location</label><input type="text">
-      <label for="user-location">Friend's Location</label><input type="text">
+      <label for="user-location">Your Location</label><input type="text" id="user-location">
+      <label for="user-location">Friend's Location</label><input type="text" id="friend-location">
       <label for="user-location">type of activity</label><input type="text">
   </div>
     </form>
