--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,5 +7,10 @@
       <button id="search-midpoint">Search</button>
   </div>
     </form>
+    <div class="row">
+    	<div class="col-lg-6">
+    <div id="mapnificent-map"></div>
     <%= render "results_map" %>
+    </div>
+    </div>
 </div>
