--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,6 +10,7 @@
     <div class="row">
     	<div class="col-lg-6">
     <div id="mapnificent-map"></div>
+    <div id="loading"></div>
     <%= render "results_map" %>
     </div>
     </div>
