added size to mapnificent map

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,7 +9,7 @@
     </form>
     <div class="row">
     	<div class="col-lg-6">
-    <div id="mapnificent-map"></div>
+    <div id="mapnificent-map" style="width:500px;height:400px;"></div>
     <div id="loading"></div>
     <%= render "results_map" %>
     </div>
