--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,8 +9,9 @@
     </form>
     <div class="row">
     	<div class="col-lg-6">
-    <div id="mapnificent-map" style="width:500px;height:400px;"></div>
+    <div id="map" style="width:500px;height:400px;"></div>
     <div id="loading"></div>
+    <div id="copyright"></div>
     <%= render "results_map" %>
     </div>
     </div>
