--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,12 +1,12 @@
 <div class="row">
   <div class="col-lg-2">
-    <form action="get">
+    <!-- <form action="get"> -->
       <label for="user-location">Your Location</label><input type="text" id="user-location">
       <label for="user-location">Friend's Location</label><input type="text" id="friend-location">
       <label for="user-location">type of activity</label><input type="text">
       <button id="search-midpoint">Search</button>
   </div>
-    </form>
+    <!-- </form> -->
     <div class="row">
     	<div class="col-lg-6">
     <div id="map" style="width:500px;height:400px;"></div>
