--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -50,13 +50,13 @@ div .center {
 
 .btn {
 	border: none;
-	margin-bottom: 5px;
+	margin-bottom: 0px;
 	border-radius: 0px;
-	margin-top: 10px;
+	margin-top: 8px;
 }
 
 #sign-up {
-	background-color: #FFB01E;
+	background-color: #D99C2B;
 	position: absolute;
 	margin: 5%;
 	padding: 30px;
@@ -71,5 +71,5 @@ div .center {
 }
 
 #logo {
-	margin-bottom: 100px;
+	margin-bottom: 0px;
 }
