partials and css

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,7 @@
-      <hr>
-      <label for="user-location">Your Location</label><input type="text" id="user-location">
-      <label for="user-location">Friend's Location</label><input type="text" id="friend-location">
-      <label for="user-location">type of activity</label><input type="text">
-      <button id="search-midpoint">Search</button>
-      <hr>
-    <div id="map" style="width:500px;height:400px;"></div>
+ 
+<%= render "address_imput" %>
+ <!--     <div id="map" style="width:500px;height:400px;"></div> -->
+    <%= render 'results_map' %>
     <div id="loading"></div>
     <div id="copyright"></div>
     <hr>
