--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,17 +14,18 @@
     <%end%>
       <div class="container">
      
-        <header>
+        
           <% if user_signed_in? %>
-          <ul class= "nav nav-tabs">
-             
-            <li class = "links"><strong>Hi, <%= current_user.first_name%></strong></li>
-            <li class = "links"><%= link_to 'Edit profile', edit_user_registration_path %></li>
+          <header>
+            <div class="links"><strong>Hi, <%= current_user.first_name%></strong></div>
+          <ul class= "nav nav-tabs home-right">
+            <li class="links"><%= link_to 'Edit profile', edit_user_registration_path %></li>
             <li class = "links"><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
           </ul>
 
         </header>
       <% end %>
+
         <div class="row">
           <%= yield %>
         </div>
