--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -15,6 +15,14 @@ header {
 	  font-size: 16px;
 }
 
+.links a {
+	  color: white;
+	  font-size: 16px;
+	  float: right;
+}
+
+.home-right { float: right;}
+
 div .center {
 	text-align: center;
 }
