--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,8 +1,12 @@
- 
-<%= render "address_imput" %>
+ <div class = "back-splash">
+      <%= render "address_imput" %>
  <!--     <div id="map" style="width:500px;height:400px;"></div> -->
-    <%= render 'results_map' %>
+      <%= render 'calc_map' %>
+
+
     <div id="loading"></div>
     <div id="copyright"></div>
     <hr>
+   
     <div id="results_map"></div>
+  </div>
