--- a/app/views/home/_address_imput.html.erb
+++ b/app/views/home/_address_imput.html.erb
@@ -1,9 +1,9 @@
 <!-- <div id="sign-up"> -->
 <div class= "input-container">
   <div class="input-bar"> 
-    Your Location: <input class="input form-control" type="text" id="user-location">
+    Your Location: <input class="input location form-control" type="text" id="user-location">
 
-    Friend's Location: <input class="input form-control" type="text" id="friend-location">
+    Friend's Location: <input class="input location form-control" type="text" id="friend-location">
     Type of activity: <input class="input form-control" type="text">
     <button id="search-midpoint">Search</button>
     <div class="row">
