--- a/app/assets/stylesheets/infowindow.css
+++ b/app/assets/stylesheets/infowindow.css
@@ -3,10 +3,12 @@
 }
 
 .infowindow h4 {
+    text-align: center;
     color: #c0392b;
-    padding-bottom: 5px;
+    margin-bottom: 5px;
 }
 
 .rating-pic {
     display: block;
+    margin-bottom: 5px;
 }
