--- a/app/views/home/_address_imput.html.erb
+++ b/app/views/home/_address_imput.html.erb
@@ -4,6 +4,7 @@
     Your Location: <input class="input location form-control" type="text" id="user-location">
 
     Friend's Location: <input class="input location form-control" type="text" id="friend-location">
+    <button class="add-friend">Add</button>
     Type of activity: <input class="input form-control" type="text">
     <button id="search-midpoint">Search</button>
     <div class="row">
