--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,6 +7,9 @@
     <div id="loading"></div>
     <div id="copyright"></div>
   
-   
+
     <div id="results_map"></div>
+
+    <%= render 'results_yelp_list' %>
+   
   </div>
