--- a/app/views/home/_results_yelp_list.html.erb
+++ b/app/views/home/_results_yelp_list.html.erb
@@ -1,3 +1,11 @@
-<div class = "yelp_list">
+<div class="yelp-table">
+<table class="table table-hover">
 
+<thead>
+</thead>
+
+<tbody>
+</tbody>
+
+</table>
 </div>
