--- a/app/views/home/landing.html.erb
+++ b/app/views/home/landing.html.erb
@@ -2,8 +2,8 @@
 	<div class="center">
 		<div><%= image_tag "mid.png", :id => "logo"%></div>
     <div class = "animated bounce" id = "logo1"><%= image_tag "point.png"%></div>
-		<%= button_to "Register", new_user_registration_path, :class => "btn btn-primary btn-lg", :method => "get" %>
-		<%= button_to "Sign in", new_user_session_path, :class => "btn btn-primary btn-sm" %>
+		<div id = "landing-buttons">
+		<%= button_to "Sign in", new_user_session_path, :class => "btn btn-primary btn-lg" %><%= button_to "Register", new_user_registration_path, :class => "btn btn-primary btn-lg", :method => "get" %></div>
 	</div>
 </div>
 
