--- a/app/views/home/_address_imput.html.erb
+++ b/app/views/home/_address_imput.html.erb
@@ -5,8 +5,9 @@
 
     Friend's Location: <input class="input location form-control" type="text" id="friend-location">
     <button class="add-friend">Add</button>
-    Type of activity: <input class="input form-control" type="text">
-    <button  id="search-midpoint" >Search</button>
+
+    Type of activity: <input class="activity input form-control" type="text">
+    <button id="search-midpoint">Search</button>
     <div class="row">
       <div class="col-lg-9">
           <div class = "col-lg-3"><%= image_tag "point.png", :id => "point-logo"%></div>
