--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
  <div class = "back-splash">
-      <%= render "address_imput" %>
+      <%= render "address_input" %>
  <!--     <div id="map" style="width:500px;height:400px;"></div> -->
       <%= render 'calc_map' %>
 
