--- a/app/views/home/_results_yelp_list.html.erb
+++ b/app/views/home/_results_yelp_list.html.erb
@@ -2,6 +2,11 @@
 <table class="table table-hover">
 
 <thead>
+  <tr>
+    <td id="table-head">
+      Results in the Middle
+    </td>
+  </tr>
 </thead>
 
 <tbody>
