--- a/app/views/home/_address_input.html.erb
+++ b/app/views/home/_address_input.html.erb
@@ -1,11 +1,14 @@
 <!-- <div id="sign-up"> -->
 <div class= "input-container">
-  <div class="input-bar"> 
+  <div class="input-bar">
+  <div>
     Your Location: <input class="input location form-control" type="text" id="user-location">
-
+    <button class="add-favorite">&hearts;</button>
+</div> 
+<div>
     Friend's Location: <input class="input location form-control" type="text" id="friend-location">
     <button class="add-friend">Add</button>
-
+</div>    
     Type of activity: <input class="activity input form-control" type="text">
     <button id="search-midpoint">Search</button>
     <div class="row">
