made calc map static

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,8 +1,9 @@
  <div class = "back-splash">
       <%= render "address_input" %>
  <!--     <div id="map" style="width:500px;height:400px;"></div> -->
+ <div id="calc-map">
       <%= render 'calc_map' %>
-
+</div>
 
     <div id="loading"></div>
     <div id="copyright"></div>
