options pulldown populates

--- a/app/views/home/_address_input.html.erb
+++ b/app/views/home/_address_input.html.erb
@@ -4,9 +4,16 @@
   <div>
     Your Location: <input class="input location form-control" type="text" id="user-location">
     <button class="add-favorite">&hearts;</button>
+    <select>
+      <option class = 'placeholder' value = ''>Favorites...</option>
+    </select>
 </div> 
 <div>
     Friend's Location: <input class="input location form-control" type="text" id="friend-location">
+    <button class="add-favorite">&hearts;</button>
+    <select>
+      <option class = 'placeholder' value = ''>Favorites...</option>
+    </select>
     <button class="add-friend">Add</button>
 </div>    
     Type of activity: <input class="activity input form-control" type="text">
