shows and updates favorites

--- a/app/views/home/_address_input.html.erb
+++ b/app/views/home/_address_input.html.erb
@@ -1,14 +1,14 @@
 <!-- <div id="sign-up"> -->
 <div class= "input-container">
   <div class="input-bar">
-  <div>
+  <div class = "location-div">
     Your Location: <input class="input location form-control" type="text" id="user-location">
     <button class="add-favorite">&hearts;</button>
     <select>
       <option class = 'placeholder' value = ''>Favorites...</option>
     </select>
 </div> 
-<div>
+<div class="location-div">
     Friend's Location: <input class="input location form-control" type="text" id="friend-location">
     <button class="add-favorite">&hearts;</button>
     <select>
