--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -212,3 +212,25 @@ body {
 	height: 500px;
 	background-color: red;
 }
+
+.add-favorite {
+	color: red;
+	display: inline-block;
+}
+
+.location {
+	display: inline-block;
+	margin-bottom: 5px;
+}
+
+.location-div {
+	margin-bottom: 10px;
+}
+
+.select-fav {
+	margin-bottom: 5px;
+}
+
+.activity {
+	margin-bottom: 10px;
+}
