--- a/app/views/home/_address_input.html.erb
+++ b/app/views/home/_address_input.html.erb
@@ -4,14 +4,14 @@
   <div class = "location-div">
     Your Location: <input class="input location form-control" type="text" id="user-location">
     <button class="add-favorite">&hearts;</button>
-    <select>
+    <select class="select-fav form-control">
       <option class = 'placeholder' value = ''>Favorites...</option>
     </select>
 </div> 
 <div class="location-div">
     Friend's Location: <input class="input location form-control" type="text" id="friend-location">
     <button class="add-favorite">&hearts;</button>
-    <select>
+    <select class="select-fav form-control">
       <option class = 'placeholder' value = ''>Favorites...</option>
     </select>
     <button class="add-friend">Add</button>
