fixed css and animations

--- a/app/views/home/_address_input.html.erb
+++ b/app/views/home/_address_input.html.erb
@@ -17,11 +17,8 @@
     <button class="add-friend">Add</button>
 </div>    
     Type of activity: <input class="activity input form-control" type="text">
-    <button id="search-midpoint">Search</button>
-    <div class="row">
-      <div class="col-lg-9">
-          <div class = "col-lg-3"><%= image_tag "point.png", :id => "point-logo"%></div>
-      </div>
+    <div class="center">
+    <button id="search-midpoint" class="btn btn-primary btn-lg">Search</button>
     </div>
   </div>
 </div>
