--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -11,11 +11,11 @@ header {
 	width: 100%;
 }
 
-body {
+/*body {
 	background: url(nyvintage.jpg) no-repeat center center fixed;
 
  /*filter: alpha(opacity=40);*/
-}
+}*/
 
 /*.container {
 	width: 100%;
@@ -208,9 +208,8 @@ body {
 }
 #results_map {
 
-	width: 500px;
+	width: 100%;
 	height: 500px;
-	background-color: red;
 }
 
 .add-favorite {
@@ -233,4 +232,9 @@ body {
 
 .activity {
 	margin-bottom: 10px;
+}
+
+.center{
+	margin-top: 0px;
+	text-align: center;
 }
