--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,12 +8,10 @@
     <%= stylesheet_link_tag    "application", :media => "all" %>
     <%= csrf_meta_tags %>
   </head>
-  <%if current_page?('/landing')%>
-  <body class='<%="landing-background"%>'>
-    <div class='<%="transparent"%>'>
-    <%end%>
+  <body class="landing-background">
+    <div class="transparent"'>
       <div class="container">
-     
+    
         
           <% if user_signed_in? %>
           <header>
