--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
- <div class = "back-splash">
+  <div class = "back-splash">
       <%= render "address_input" %>
  <!--     <div id="map" style="width:500px;height:400px;"></div> -->
  <div id="calc-map">
@@ -7,7 +7,12 @@
 
     <div id="loading"></div>
     <div id="copyright"></div>
-  
+<!-- 
+        <div class="progress progress-striped active">
+  		<div class="progress-bar"  role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
+    	<span class="sr-only">45% Complete</span>
+  	</div>
+		</div> -->
 
     <div id="results_map"></div>
 
