--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,15 +7,18 @@
 
     <div id="loading"></div>
     <div id="copyright"></div>
-<!-- 
-        <div class="progress progress-striped active">
-  		<div class="progress-bar"  role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
-    	<span class="sr-only">45% Complete</span>
+
+    <div class="progress progress-striped active">
+  	<div class="progress-bar"  role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
+    <span class="sr-only">45% Complete</span>
   	</div>
-		</div> -->
+		</div>
+
+
 
     <div id="results_map"></div>
 
     <%= render 'results_yelp_list' %>
    
   </div>
+
