--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     <%= csrf_meta_tags %>
   </head>
   <body class="landing-background">
-    <div class="transparent"'>
+    <div class="transparent">
       <div class="container">
     
         
@@ -39,6 +39,4 @@
     <%= javascript_include_tag "application" %>
 
   </body>
-
-
 </html>
