--- a/app/views/home/_results_yelp_list.html.erb
+++ b/app/views/home/_results_yelp_list.html.erb
@@ -1,4 +1,4 @@
-<div class="yelp-table">
+<!-- <div class="yelp-table">
 <table class="table table-hover">
 
 <thead>
@@ -12,7 +12,7 @@
 </tbody>
 
 </table>
-</div>
+</div> -->
 
 
 
